Bug 1795749: Notification count is more visible on dashboard
The notification count on the inbox icon on the dashboard
stands out more now.

behatnotneeded because it's a design change only

(cherry picked from commit b0dfe7350fafc2d28e1f33e5560331d1e25558b3)

--- a/htdocs/theme/raw/sass/layout/nav/_navbar.scss
+++ b/htdocs/theme/raw/sass/layout/nav/_navbar.scss
@@ -112,11 +112,12 @@
     .navbar-messages-count {
         position: absolute;
         top: -3px;
-        right: 8px;
-        background-color: $navbar-default-bg;
-        border-radius: 5px;
+        right: 5px;
+        background-color: $navbar-notification-count-bg;
+        border-radius: 3px;
         padding: 0 3px;
-        color: $navbar-default-brand-color;
+        color: $navbar-notification-count-text;
+        font-size: $font-size-small;
     }
 }
 
